Fixed behavior of dropdown when reference goes out of view.

--- a/packages/Dropdown/src/dropdown.scss
+++ b/packages/Dropdown/src/dropdown.scss
@@ -46,4 +46,8 @@
   &--large {
     --ids-dropdown-padding: #{tokens.$space-5};
   }
+
+  &--hidden {
+    display: none;
+  }
 }
